# me

./: README.md  astro.config.mjs  deploy.sh  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy.yml
assets/: index.08f98b4c.css  index.3aa2f9ef.js  index.6daa108a.js  index.7da1f5d1.css
config/: projects.json
old/: README.md  package-lock.json  package.json  vite.config.ts
old/src/components/: Nav.vue  ThemeSwitcher.vue
old/src/components/ui/: MemojiLoop.vue
old/src/composables/: useTextEffect.ts
src/: App.vue  style.scss
src/app/: globals.css  layout.tsx  page.tsx
src/app/blog/: page.tsx
src/app/blog/maang/: page.tsx
src/app/bookshelf/: page.tsx
src/app/fun/gol/: game-of-life.tsx  page.tsx
src/app/fun/gol/wasm/: Cargo.toml
src/app/fun/gol/wasm/pkg/: game_of_life.d.ts  game_of_life.js  game_of_life_bg.wasm  game_of_life_bg.wasm.d.ts  package.json
src/app/fun/gol/wasm/src/: lib.rs
src/components/: Footer.astro  GlitchText.tsx  MemojiLoop.astro  Nav.vue  Navbar.astro  Navbar.tsx  ThemeSwitcher.astro  badge.tsx  memoji-loop.tsx  navbar.tsx  project-card.tsx  starfield.astro  switch.tsx  theme-switcher.tsx
src/components/ui/: GlitchText.vue  HelloWall.vue
src/layouts/: Layout.astro
src/pages/: Home.vue  index.astro  pgp.astro
src/util/: lib.ts
