[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
piet = "0.6.2"
piet-web = "0.6.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
] }

[lib]
crate-type = ["cdylib", "rlib"]
